- fix the alignment of .content-event, .content-cafe-info, .content-gallery-info, .content-artist-info - added a reward icon - fix pagination position and CSS - fix art gallery css - fix emerging artist css

--- a/app/assets/stylesheets/frontend/_layout.scss
+++ b/app/assets/stylesheets/frontend/_layout.scss
@@ -422,7 +422,7 @@ input[type="text"] {
 		text-align:center;
 	}
 }
-.page, .newspage, .coffeeadventurepage {
+.page, .newspage, .coffeeadventurepage, .events, .calendarpage, .emerging-artists {
 	.section {
 		padding:100px 0;
 		h1 {
@@ -1291,7 +1291,7 @@ li.post-list {
 .modal-title {
 	font-weight:300;
 }
-.content-event, .content-cafe-info {
+.content-event, .content-cafe-info, .content-gallery-info, .content-artist-info {
 	width:100%;
 	overflow:hidden;
 
@@ -1310,9 +1310,10 @@ li.post-list {
 			max-height: 100%;
 			display: block;
 			height: auto !important;
+			margin: 0 20px 20px;
 		}
 	}
-	.date, .time, .address, .email, .social-links, .poster, .type, .food, .drinks {
+	.date, .time, .address, .email, .social-links, .poster, .type, .food, .drinks, .organizer, .menu, .awards {
 		display: block;
 		font-size: 14px;
 		line-height: 16px;
@@ -1328,15 +1329,19 @@ li.post-list {
 			display: none;
 		}
 	}
-	.time, .address, .email, .social-links, .poster, .type, .food, .drinks, .menu {
+	.date, .time, .address, .email, .social-links, .poster, .type, .food, .drinks, .organizer, .menu, .awards {
 		border-top: 1px solid #eee;
+	}
+
+	.menu {
+		padding-left:0;
 	}
 	.poster {
 		padding:0;
 	}
 	.organizer {
 		display: block;
-		padding:10px 0;
+		padding-left:0;
 		font-size: 14px;
 		line-height: 16px;
 	}
@@ -1361,9 +1366,11 @@ li.post-list {
 	.drinks {
 		background-image: asset-url("icon-drinks.png");
 	}
+	.awards {
+		background-image: asset-url("icon-awards.png");
+	}
 	.social-links {
-		padding:0;
-		padding-bottom: 10px;
+		padding-left:0;
 		ul {
 			display: block;
 			margin:0;
